
== Unreleased

=== Changed

* Rework styles for tab to make them compatible with a transition effect; stub in effect in built-in stylesheet

=== Fixed

* Don't alter state of nested tabs when tab is selected (#55)
* Don't wrap tables inside nested tabs with tablecontainer div multiple times (#55)

== 1.0.0-beta.3 (2023-02-01) - @mojavelinux

=== Added

* Allow storage of sync tab selection to be configured using `tabs-sync-storage-key` and `tabs-sync-storage-scope` document attributes
* Add `is-loaded` class to tabs blocks on next tick after initialization for binding transitions (#50)
* Allow sync group ID to be specified rather than derived using the `sync-group-id` attribute on the tabs block (#52)

=== Changed

* Rename data-sync-group attribute to data-sync-group-id
* Don't lowercase sync group ID

=== Details

{url-repo}/releases/tag/v1.0.0-beta.3[git tag] | {url-repo}/compare/v1.0.0-beta.2\...v1.0.0-beta.3[full diff]

== 1.0.0-beta.2 (2023-01-30) - @mojavelinux

=== Changed

* Only sync congruent tabs blocks (i.e., tabs blocks that have the same tablist) (#47)
* Store sync tab selection by sync group (e.g., `preferred-tab-a|b|c`) (#47)

=== Fixed

* Turn off :focus-visible outline on tab selected by URL fragment

=== Details

{url-repo}/releases/tag/v1.0.0-beta.2[git tag] | {url-repo}/compare/v1.0.0-beta.1\...v1.0.0-beta.2[full diff]

== 1.0.0-beta.1 (2023-01-30) - @mojavelinux

=== Added

* Pass through role attribute on tabs block (#43)
* Add configuration option to save sync selection (i.e., sync ID) in local or session storage (#44)

=== Fixed

* Use correct selector to unhide panel of first tab while tabs are loading

=== Details

{url-repo}/releases/tag/v1.0.0-beta.1[git tag] | {url-repo}/compare/v1.0.0-alpha.12\...v1.0.0-beta.1[full diff]

== 1.0.0-alpha.12 (2022-12-23) - @mojavelinux

=== Fixed

* Wrap div with class `tablecontainer` around tables inside tabpanel to prevent tables from overflowing bounds while honoring width (#41)

=== Details
