@@ -14,6 +14,7 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 
 * Don't alter state of nested tabs when tab is selected (#55)
 * Don't wrap tables inside nested tabs with tablecontainer div multiple times (#55)
+* Fix fallback logic in behavior script when tab is missing ID or does not match a panel
 
 == 1.0.0-beta.3 (2023-02-01) - @mojavelinux
 
